Changes for 2.0.1rc1

New features:

Bug fixes:
...G...... [ZBX-3897] fixed processing of proc.num[] item under FreeBSD; thanks to Jim Riggs (Sasha)

--------------------------------------------------------------------------------
Changes for 2.0.0

Bug fixes:
A......... [ZBX-5025] fixed "undefined index" error when updating specific trigger properties (Pavels)
..F....... [ZBX-5004] fixed error when importing linked templates (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.0rc6

New features:
..F....... [ZBX-1357] updated Brazilian Portuguese, French, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
....I..... [ZBXNEXT-973] changed units to "bps" for monitoring of network traffic items (Sasha)
....I..... [ZBXNEXT-973] changed colors in the "MySQL operations" graph (Sasha)
...G...PS. [ZBXNEXT-1220] fixed compilation errors on Solaris (dimir)

--------------------------------------------------------------------------------
Changes for 2.0.0rc5

New features:
..F.I..... [ZBXNEXT-1225] added the "Classic" frontend theme (Pavels)
..F....... [ZBX-1357] updated Brazilian Portuguese, Dutch, Greek, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
...G...PS. [ZBXNEXT-1220] added support of monitoring of log files larger than 2GB (Sasha)
...G...... [ZBX-3151] added support of monitoring files larger than 2GB in the vfs.file.size[] item (Sasha)

Bug fixes:
..F....... [ZBX-5005] fixed escaping of percent character in translation string (Vedmak)
A......... [ZBX-4997] fixed inherited item interfaces being set to null when updated by importing parent template (Eduard)
....I..... [ZBX-5003] backticked table and field names in the MySQL scheme and default data (Sasha)
..F....... [ZBX-5002] fixed undefined index error when rendering a node tree in a DM setup (Pavels)
A.F....... [ZBX-5008] fixed updating users that do not belong to the selected node (Pavels)